<resources>
    <string name="app_name">Cerita Kita</string>
    <string name="signup">Sign-Up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Check out friends\' stories and share yours with them about your learning experience to graduate from Dicoding!</string>
    <string name="title_welcome_page">Welcome to Cerita Kita!</string>
    <string name="title_signup_page">Complete your data below…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your data first…</string>
    <string name="message_error_name">Name cannot be empty.</string>
    <string name="message_error_password">Password must not be less than 8 characters.</string>
    <string name="message_error_description">The story description cannot be empty.</string>
    <string name="message_error_email">Incorrect e-mail format.</string>
    <string name="title_login_page">Are you ready to share your story?</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="title_dialog_signup_success">Account created successfully</string>
    <string name="title_dialog_signup_failed">Account failed to create</string>
    <string name="title_dialog_login_failed">Login failed</string>
    <string name="title_dialog_token_failed">Invalid token</string>
    <string name="message_dialog_token_failed">Please do the re-login process to get a valid token.</string>
    <string name="message_login_success">Login successful</string>
    <string name="message_dialog_server_response">"Message: "</string>
    <string name="message_dialog_server_error">"There is an error: "</string>
    <string name="positive_button_dialog_failed">Got it!</string>
    <string name="positive_button_dialog_success">Continue</string>
    <string name="message_dialog_signup_success">Now please continue logging in.</string>
    <string name="text_item_username">Username</string>
    <string name="text_item_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="text_item_date">12 NOV 2023 | 13:06</string>

    <string name="label_language">Language</string>
    <string name="label_add_story">Add Story</string>
    <string name="label_detail_story">Story Details</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="desc_create_new_story">add new story</string>
    <string name="hint_add_story">What do you want to tell?</string>
    <string name="empty_image_warning">Please insert the image file first.</string>
    <string name="message_camera_failed_shown">Failed to bring up the camera.</string>
    <string name="message_camera_failed_picture">Failed to take picture.</string>
    <string name="message_camera_permission_success">Camera permission allowed.</string>
    <string name="message_permission_failed">Failed to get permission.</string>
    <string name="appwidget_text">CERITA KITA BANNER</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">NO DATA</string>

    <string name="description_add_story_preview_image">Story image preview</string>
    <string name="description_camera_capture_image">Capture image</string>
    <string name="description_camera_switch_camera">Switch camera</string>
    <string name="description_detail_story_user_avatar">User avatar</string>
    <string name="description_login_page_image">Login page image</string>
    <string name="description_signup_page_image">Signup page image</string>
    <string name="description_welcome_screen_image">Welcome screen image</string>
    <string name="description_story_list_item_image">Story list item image</string>
    <string name="description_widget_image">Widget image</string>
    <string name="description_detail_story_image">Story image</string>
    <string name="description_btn_select_location">Select location</string>
    <string name="description_selected_location">selected location</string>

    <string name="retry">Try again</string>

    <string name="title_activity_story_location">StoryLocationActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>

    <string name="select_location">Select location</string>
    <string name="story_location">Story Location</string>
    <string name="title_activity_new_story_pick_location">AddStoryPickLocation</string>
    <string name="location_unknown">📌 Location Unknown</string>
    <string name="btn_click_select_location">(Click here to select the location)</string>
    <string name="btn_continue">Continue</string>
    <string name="hint_pick_location">Pick location first…</string>
    <string name="label_pick_location">Pick Location</string>

    <string name="title_dialog_permission">Permission Required</string>
    <string name="message_dialog_permission_camera">You need to allow access to your smartphone\'s camera to access this feature.</string>
    <string name="message_dialog_permission_location">You need to share your smartphone\'s location to access this feature. Tap [Allow] to allow the access to this app. If you are allowed to select the precision, select [Precise].</string>
    <string name="title_dialog_select_location_failed">Location selection failed</string>
    <string name="message_dialog_select_location_failed">Try checking your internet connection and starting again from the beginning.</string>
    <string name="dialog_button_allow">Allow</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="permission_not_allowed_location">Location permission not allowed.</string>
    <string name="permission_not_allowed_camera">Camera permission not allowed.</string>
</resources>